# wisdomexchangemarkIIc

./: CMakeLists.txt  DisplayImage.cpp  README.md  Wisdom.cpp  Wisdom.h
src/: CMakeLists.txt  Wisdom.cpp  Wisdom.h
test/: CMakeLists.txt  WisdomTest.cpp  main.cpp  testData.csv
